--- a/planning.tex
+++ b/planning.tex
@@ -55,6 +55,8 @@ framework for experimental planning that can be used in most data science projec
 {}
 \clearpage
 
+\input{evaluation}
+
 \section{Elements of an experimental plan}
 
 There are important elements that should be considered when designing an experimental
