--- a/machines.tex
+++ b/machines.tex
@@ -107,7 +107,7 @@ A complete discussion of deep learning can be found in
 \textcite{Goodfellow2016}\footfullcite{Goodfellow2016}.
 
 \clearpage
-\subsection{Decision trees}
+\section{Decision trees}
 
 The decision tree is a non-linear classifier that generates a set of hyperplanes that
 are orthogonal to the axes.  Consider the decision tree in \cref{fig:tree-and}.
