Some little details on perceptron.

--- a/history.tex
+++ b/history.tex
@@ -634,11 +634,10 @@ perceptron\footnote{Although the Rosenblatt was aware of the limitations of the 
 and was probably working on solutions, he died in 1971.}. They showed that a single-layer
 perceptron was limited to linearly separable problems, which led to a decline in the
 interest in neural networks.
+See \cref{sub:perceptron} for more details about the technique.
 
 This fact contributed to the first AI winter, resulting in funding cuts for neural
 network research.
-
-% See \cref{sub:perceptron} for more details about the technique.
 
 \paragraph{Hunt inducing trees}
 
