--- a/machines.tex
+++ b/machines.tex
@@ -14,6 +14,7 @@ other machine learning algorithms will be discussed here.
 \clearpage
 
 \section{Multi-layer perceptron}
+\label{sec:mlp}
 
 The \gls{mlp} is a non-linear classifier that generates a set of hyperplanes
 that separates the classes.  In order to simplify the understanding, consider the
